--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,45 +1,41 @@
 {% extends "base.html" %}
 {% load static %}
-
-{% block content %}
-
 {% block extra_title %}
   | Home
 {% endblock %}
 
+{% block content %}
+
 {% block page_header %}
-  <div class="container header-container">
+  <!--<div class="container header-container">
     <div class="row">
       <div class="col">
 
       </div>
     </div>
-  </div>
+  </div>-->
 {% endblock %}
 
 <section>
-    <div class="container-fluid pt-4">
+    <div class="container-fluid ">
         <div class="row">
             <!--Mobile screen hero image and heading-->
             <div class="col-sm-12 d-md-none">
                 <h2 class="mob-logo pt-5 center">sound store</h2>
-                <img class="d-block hero hero-mob" src='' alt="Inner shop hero 1">
+                <img class="hero-mob pt-0 pb-0" src='./media/ms-4-hero-3.jpg' alt="Inner shop hero 1">
             </div>
             <!-- Hero Image Carousel for md and above screens -->
             <div class="d-none d-md-block col-md-12">
                 <div id="carousel" class="carousel slide w-100" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block hero" src='' alt="Inner shop hero 1">
+                            <img class="d-block hero" src='./media/ms-4-hero-2.jpg' alt="Inner shop hero 1">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block hero " src="" alt="Inner shop hero 2">
+                            <img class="d-block hero " src="./media/ms-4-hero-3.jpg" alt="Inner shop hero 2">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block hero " src="" alt="Inner shop hero 3">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block hero " src="" alt="Inner shop hero 4">
+                            <img class="d-block hero " src="./media/ms-4-hero.jpg" alt="Inner shop hero 3">
                         </div>
                     </div>
                 </div>
