Add navbar links and mobile header to separate 'includes' folder in templates folder

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,13 +7,13 @@
 {% block content %}
 
 {% block page_header %}
-  <!--<div class="container header-container">
+  <div class="container header-container">
     <div class="row">
       <div class="col">
 
       </div>
     </div>
-  </div>-->
+  </div>
 {% endblock %}
 
 <section>
@@ -25,7 +25,7 @@
                 <img class="hero-mob pt-0 pb-0" src='./media/ms-4-hero-3.jpg' alt="Inner shop hero 1">
             </div>
             <!-- Hero Image Carousel for md and above screens -->
-            <div class="d-none d-md-block col-md-12">
+            <div class="d-none d-md-block col-md-12 pt-5">
                 <div id="carousel" class="carousel slide w-100" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
