--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse category-nav dropdown-mobile" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -14,7 +14,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Drums
             </a>
             <div class="dropdown-menu" aria-labelledby="clothing-link">
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Guitars
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
@@ -39,7 +39,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Bass
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Brass
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
@@ -64,7 +64,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link text-black mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link text-black mr-5" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Strings
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
@@ -76,7 +76,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font category-head font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="category-head font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
