--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -12,7 +12,7 @@
                   <div class="input-group-append">
                       <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
                           <span class="icon">
-                              <i class="fas fa-search"></i>
+                              <i class="fas fa-search dark-color"></i>
                           </span>
                       </button>
                   </div>
@@ -23,7 +23,7 @@
   <li class="list-inline-item dropdown">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
-              <div class="icon-media-query"><i class="fas fa-user fa-lg"></i></div>
+              <div class="icon-media-query"><i class="fas fa-user fa-lg dark-color"></i></div>
           </div>
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -42,7 +42,7 @@
   <li class="list-inline-item">
       <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
           <div class="text-center">
-              <div class="icon-media-query"><i class="fas fa-shopping-bag fa-lg"></i></div>
+              <div class="icon-media-query"><i class="fas fa-shopping-bag fa-lg dark-color"></i></div>
               <!--<p class="my-0 media-query-text">
                   {% if grand_total %}
                       ${{ grand_total|floatformat:2 }}
