--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,13 +7,13 @@
 {% block content %}
 
 {% block page_header %}
-  <div class="container header-container">
+  <!--<div class="container header-container">
     <div class="row">
       <div class="col">
 
       </div>
     </div>
-  </div>
+  </div>-->
 {% endblock %}
 
 <section>
