--- a/static/css/base.css
+++ b/static/css/base.css
@@ -493,6 +493,17 @@ body {
     }
   } 
 
+  @media (max-width: 700px) {
+    .hero-mob {
+        object-fit: cover;
+    }
+  }
+
+  @media (min-width: 1000px) {
+  .carousel {
+    padding-top: 100px;
+ }
+}
 
 @media (min-width: 1200px) {
     .container {
