Add footer to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,6 +125,23 @@
     {% block content %}
     {% endblock %}
 
+    <!--Footer-->
+    <footer>
+      <div class="container-fluid footer-container">
+        <div class="row">
+          <div class="col-12 social p-2">
+            <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square mr-1"
+                aria-hidden="true"></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square mr-1"
+                aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          </div>
+          <div class="col-12 p-2">
+            <p>&#169; 2021 Sound Store</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     {% block postloadjs %}
     {% endblock %}
     </body>
