Complete media queries on index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -47,43 +47,43 @@
 <section>
   <h2 class="pt-1 mt-1 category-logo">Our Categories</h2>
     <div class="container-fluid">
-        <div class="row d-flex flex-row w-100 category-container">
-          <div class="d-none d-md-block col-md-2 col-lg-4 p-2 category category-mob">
-            <a href="">
+      <div class="row d-flex flex-row w-100 category-container">
+        <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
+          <a href="">
             <img class="category-images " src="./media/drums-category.jpg" alt="Drum Set Category">
             <p class="descriptor p-2">Drums</p>
-            </a>
-          </div>
-          <div class="d-none d-md-block col-md-2 col-lg-4 p-2 category category-mob">
-            <a href="">
-           <img class="category-images" src="./media/guitar100.jpg" alt="Guitar Category">
-           <p class="descriptor p-2">Guitars</p>
-           </a>
-         </div>
-         <div class="d-none d-md-block col-md-2 col-lg-4 p-2 category category-mob">
-           <a href="">
-           <img class="category-images" src="./media/bass-category.jpg" alt="Bass Guitar Category">
-           <p class="descriptor p-2">Bass</p>
-           </a>
-         </div>
-         <div class="d-none d-md-block col-md-2 col-lg-4 p-2 category category-mob">
-           <a href="">
-           <img class="category-images" src="./media/trumpet.jpg" alt="Brass Category">
-           <p class="descriptor p-2">Brass</p>
-           </a>
-         </div>
-         <div class="d-none d-md-block col-md-2 col-lg-4  p-2 category category-mob">
-           <a href="">
-           <img class="category-images" src="./media/viola.jpg" alt="String Instruments Category">
-           <p class="descriptor p-2">Strings</p>
-           </a>
-         </div>
-         <div class="d-none d-md-block col-md-2 col-lg-4  p-2 category category-mob">
-           <a href="">
-           <img class="category-images" src="./media/accessories.jpg" alt="Accessories Category">
-           <p class="descriptor p-2">Accessories</p>
-           </a>
-         </div>
+          </a>
         </div>
+        <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
+          <a href="">
+            <img class="category-images" src="./media/guitar100.jpg" alt="Guitar Category">
+            <p class="descriptor p-2">Guitars</p>
+          </a>
+        </div>
+        <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
+          <a href="">
+            <img class="category-images" src="./media/bass-category.jpg" alt="Bass Guitar Category">
+            <p class="descriptor p-2">Bass</p>
+          </a>
+        </div>
+        <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
+          <a href="">
+            <img class="category-images" src="./media/trumpet.jpg" alt="Brass Category">
+            <p class="descriptor p-2">Brass</p>
+          </a>
+        </div>
+        <div class="col-sm-4 col-md-2 col-lg-4  p-2 category category-mob">
+          <a href="">
+            <img class="category-images" src="./media/viola.jpg" alt="String Instruments Category">
+            <p class="descriptor p-2">Strings</p>
+          </a>
+        </div>
+        <div class="col-sm-4 col-md-2 col-lg-4  p-2 category category-mob">
+          <a href="">
+            <img class="category-images" src="./media/accessories.jpg" alt="Accessories Category">
+            <p class="descriptor p-2">Accessories</p>
+          </a>
+        </div>
+      </div>
 </section>
 {% endblock %}
