--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     /* padding: 65px 0 0 0; */
     height: calc(100vh - 164px);
+    position: relative;
 }
 
 /* -------------------------------- base.html */
@@ -14,6 +15,7 @@ body {
     position: relative;
     bottom: 0;
     left: 0;
+    text-align: center;
 }
 
 .color {
@@ -41,10 +43,6 @@ body {
 .delivery {
     height: 100px;
     width: 100px;
-}
-
-.footer-container {
-    text-align: center;
 }
 
 .social > a {
