Create product_details page and render on screen via views and urls files

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -46,7 +46,7 @@
 <!-- Category Links -->
 <section>
   <h2 class="pt-1 mt-1 category-logo">Our Categories</h2>
-    <div class="container-fluid">
+    <div class="container-fluid category-container-imgs">
       <div class="row d-flex flex-row w-100 category-container">
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
           <a href="">
