--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
     {% endblock %}
 
     <!--Footer-->
-    <footer>
+    <footer class='pt-5'>
       <div class="container-fluid footer-container">
         <div class="row">
           <div class="col-12 social p-2">
