--- a/static/css/base.css
+++ b/static/css/base.css
@@ -55,7 +55,7 @@ body {
 }
 
 .navbar {
-    background-color: #fdfffc;
+    background-color: white;
     height: 75px;
 }
 
@@ -158,6 +158,10 @@ body {
     text-align: left;
 }
 
+.category-container-imgs {
+    overflow: hidden;
+}
+
 .category:hover {
     text-decoration: underline;
 }
@@ -248,6 +252,11 @@ body {
 
 .btt-link {
     cursor: pointer;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-around;
 }
 
  /* -------------------------------- product_detail.html */
@@ -487,6 +496,18 @@ body {
     }
   } 
 
+  @media (max-width: 600px) {
+      .product-name {
+          font-size: 1.7rem;
+      }
+
+      .price {
+        font-size: 1rem;
+      }
+
+      
+  }
+
   @media (max-width: 764px) {
     .hero-mob {
         object-fit: cover;
@@ -500,6 +521,7 @@ body {
     object-fit: contain;
   }
 
+  
 }
 
 
@@ -539,4 +561,18 @@ body {
       .category-container-mobile {
           display: none;
       }
+  }
+
+  /* -------------------------------- Colors */
+
+  .orange {
+      color: #ff9f1c;
+  }
+
+  .dark-blue {
+      color: #011627;
+  }
+
+  .red {
+      color: #e71d36;
   }
