--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -1,4 +1,5 @@
 <ul>
+    <!-- Search Bar -->
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
@@ -6,7 +7,7 @@
           </div>
       </a>
       <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-          <form class="form" method="GET" action="">
+          <form class="form" method="GET" action="{% url 'products' %}">
               <div class="input-group w-100">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
@@ -20,6 +21,7 @@
           </form>
       </div>
   </li>
+  <!-- Account Link -->
   <li class="list-inline-item dropdown">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
@@ -39,17 +41,11 @@
           {% endif %}
       </div>
   </li>
+  <!-- Shopping Cart -->
   <li class="list-inline-item">
       <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
           <div class="text-center">
               <div class="icon-media-query"><i class="fas fa-shopping-bag fa-lg dark-color"></i></div>
-              <!--<p class="my-0 media-query-text">
-                  {% if grand_total %}
-                      ${{ grand_total|floatformat:2 }}
-                  {% else %}
-                      $0.00
-                  {% endif %}
-              </p>-->
           </div>
       </a>
     </li>
