Add button to bottom of products page to scroll to top plus js to make it function

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -45,7 +45,7 @@
               </p>
               {% endif %}
                 {% if product.rating %}
-                <small class="text-muted roboto"><i class="fas fa-star mr-1"></i>Rated {{ product.rating }} / 5</small>
+                <small class="text-muted roboto"><i class="fas fa-star mr-1 rating-color"></i>Rated {{ product.rating }} / 5</small>
               {% else %}
                 <small class="text-muted roboto">There is no rating for this product, yet!</small>
               {% endif %}
