--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -39,9 +39,6 @@
           </div>
           <div class="col-12 col-md-6 order-md-first">
             <p class="text-muted mt-3 text-center text-md-left">
-                {% if search_term or current_categories or current_sorting != 'None_None' %}
-                    <!--<span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>-->
-                {% endif %}
                 {{ products|length }} Products found{% if search_term %} for <strong>"{{ search_term }}"</strong>{% endif %}
             </p>
         </div>
@@ -71,13 +68,13 @@
         <p><a class="mb-0 product-name detail-link" href="{% url 'product_detail' product.id %}">{{ product.name }}</a></p>
         {% if product.category %}
         <p>
-        <a href="" class="text-muted">
+        <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
           <small class="text-muted"><i class="fa fa-sort mr-1" aria-hidden="true"></i>{{ product.category.friendly_name }}</small>
         </a>
         </p>
         {% endif %}
         {% if product.rating %}
-          <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+          <small class="text-muted"><i class="fas fa-star mr-1 rating-color"></i>{{ product.rating }} / 5</small>
         {% else %}
           <small class="text-muted">There is no rating for this product, yet!</small>
         {% endif %}
@@ -102,4 +99,36 @@
 </div>
 </div>
            
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
