--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -49,37 +49,37 @@
     <div class="container-fluid category-container-imgs">
       <div class="row d-flex flex-row w-100 category-container">
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
-          <a href="">
+          <a href="{% url 'products' %}?category=drum_sets,shell_sets,cymbals">
             <img class="category-images " src="./media/drums-category.jpg" alt="Drum Set Category">
             <p class="descriptor p-2">Drums</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
-          <a href="">
+          <a href="{% url 'products' %}?category=electric_guitar,acoustic_guitar">
             <img class="category-images" src="./media/guitar100.jpg" alt="Guitar Category">
             <p class="descriptor p-2">Guitars</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
-          <a href="">
+          <a href="{% url 'products' %}?category=electric_bass,acoustic_bass">
             <img class="category-images" src="./media/bass-category.jpg" alt="Bass Guitar Category">
             <p class="descriptor p-2">Bass</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4 p-2 category category-mob">
-          <a href="">
+          <a href="{% url 'products' %}?category=trumpet,saxophone,trombone">
             <img class="category-images" src="./media/trumpet.jpg" alt="Brass Category">
             <p class="descriptor p-2">Brass</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4  p-2 category category-mob">
-          <a href="">
+          <a href="{% url 'products' %}?category=violin,viola">
             <img class="category-images" src="./media/viola.jpg" alt="String Instruments Category">
             <p class="descriptor p-2">Strings</p>
           </a>
         </div>
         <div class="col-sm-4 col-md-2 col-lg-4  p-2 category category-mob">
-          <a href="">
+          <a href="{% url 'products' %}?category=microphones,hardware,strings_straps">
             <img class="category-images" src="./media/accessories.jpg" alt="Accessories Category">
             <p class="descriptor p-2">Accessories</p>
           </a>
