--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
             </li>
             <li class="list-inline-item">
               <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                href="">
+                href="{% url 'view_bag' %}">
                 <div class="text-center">
                   <div><i class="fas fa-shopping-cart fa-lg dark-color"></i></div>
                   <p class="my-0 dark-color">
@@ -122,9 +122,10 @@
     {% block page_header %}
     {% endblock %}
 
-    {% block content %}
-    {% endblock %}
-
+    <section class="main-content">
+        {% block content %}
+        {% endblock %}
+    </section>
     <!--Footer-->
     <footer class='pt-5'>
       <div class="container-fluid footer-container">
