--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -43,7 +43,7 @@
   </li>
   <!-- Shopping Cart -->
   <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
+      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
           <div class="text-center">
               <div class="icon-media-query"><i class="fas fa-shopping-bag fa-lg dark-color"></i></div>
           </div>
