Add contexts.py and test it works by rendering a variable from it's context in browser

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -52,6 +52,9 @@
   </div>
 
   <div class="row">
+    <div class="col-12">
+      <p class="free-delivery center">Spend €{{ free_delivery_threshold }} for free delivery!</p>
+    </div>
     {% for product in products %}
     <hr class="w-100 mt-3">
       <div class="col-12 product-container">
