--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -53,7 +53,7 @@
               <p class="mt-3 center">{{ product.description }}</p>
               </div>
               <p class="lead font-weight-bold price-detail mt-5"><span class="price-color">Our Price: ${{ product.price }}</span></p>
-
+              <p class="free-delivery">Spend €{{ free_delivery_threshold }} for free delivery!</p>
             
               <form class="form" action="" method="POST">
                 {% csrf_token %}
