--- a/static/css/base.css
+++ b/static/css/base.css
@@ -205,6 +205,10 @@ body {
     font-size: 2rem;
  }
 
+ .btn-links {
+     border: 1px solid black;
+ }
+
  .price {
     font-family: 'Tenor Sans', serif;
     color: #122c34;
