--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -42,9 +42,9 @@
                         <tr>
                             <td class="p-3 w-25">
                                 {% if item.product.image %}
-                                <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                <img class="img-fluid rounded cart-images" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                                 {% else %}
-                                <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                <img class="img-fluid rounded cart-images" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
                                 {% endif %}
                             </td>
                             <td class="py-3">
@@ -55,7 +55,7 @@
                                 <p class="my-0">${{ item.product.price }}</p>
                             </td>
                             <td class="py-3 w-25">
-                                <form method="POST" action="{% url 'adjust_bag' item.item_id %}" class="form update-form">
+                                <form method="POST" action="" class="form update-form">
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="input-group">
@@ -92,12 +92,12 @@
                     {% endfor %}
                     <tr>
                         <td colspan="5" class="pt-5 text-right">
-                            <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                            <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                            <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                            <h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
+                            <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
+                            <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
                             {% if free_delivery_delta > 0 %}
                                 <p class="mb-1 text-danger">
-                                    Spend just <strong>${{ free_delivery_delta }}</strong> more for free delivery!
+                                    Spend just <strong>€{{ free_delivery_delta }}</strong> more for free delivery!
                                 </p>
                             {% endif %}
                         </td>
@@ -105,19 +105,19 @@
                     <tr>
                         <td colspan="5" class="text-right">
                             <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                <span class="icon">
-                                    <i class="fas fa-chevron-left"></i>
-                                </span>
-                                <span class="text-uppercase">Keep Shopping</span>
+                                
+                                <span class="text-uppercase btn btn-links">Back to shop</span>
                             </a>
-                            <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-                                <span class="text-uppercase">Secure Checkout</span>
-                                <span class="icon">
-                                    <i class="fas fa-lock"></i>
+                            <a href="" class="btn btn-black rounded-0 btn-lg">
+                                <span class="text-uppercase btn btn-links">Secure Checkout
+                                    <span class="icon">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
                                 </span>
                             </a>
                         </td>
                     </tr>
+
                 </table>
             </div>
             {% else %}
