--- a/templates/base.html
+++ b/templates/base.html
@@ -90,9 +90,9 @@
                   <div><i class="fas fa-shopping-cart fa-lg dark-color"></i></div>
                   <p class="my-0 dark-color">
                     {% if grand_total %}
-                      ${{ grand_total|floatformat:2 }}
+                      €{{ grand_total|floatformat:2 }}
                     {% else %}
-                      $0.00
+                      €0.00
                     {% endif %}
                   </p>
                 </div>
