--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block extra_title %}
   | View Cart
@@ -55,7 +56,7 @@
                                 <p class="my-0">${{ item.product.price }}</p>
                             </td>
                             <td class="py-3 w-25">
-                                <form method="POST" action="" class="form update-form">
+                                <form method="POST" action="{% url 'adjust_bag' item.item_id %}" class="form update-form">
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="input-group">
@@ -86,7 +87,7 @@
                                 <a class="float-right remove remove-item" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                             </td>
                             <td class="py-3">
-                                <p class="my-0">${{ item.product.price }}</p>
+                                <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }} </p>
                             </td>
                         </tr>
                     {% endfor %}
@@ -134,5 +135,31 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
+
+    <script type="text/javascript">
+        // Update quantity
+        $('.update-link').click(function(e) {
+            var form = $(this).prev('.update-form');
+            form.submit();
+        })
+    
+        // Remove item 
+        $('.remove-item').click(function(e) {
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).attr('id').split('remove_')[1];
+            var url = `/cart/remove/${itemId}/`;
+            var data = {'csrfmiddlewaretoken': csrfToken};
+    
+            $.post(url, data)
+             .done(function() {
+                 location.reload();
+             });
+        })
+    </script>
 {% endblock %}
 
