--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,6 +18,7 @@
 <div class="container">
   <div class="row">
       <div class="col text-center mt-0">
+        <hr>
           <h2 class="logo-font mt-4 center dark-blue">All Instruments</h2>
 
          <!--Sort by options-->
@@ -53,7 +54,7 @@
 
   <div class="row">
     <div class="col-12">
-      <p class="free-delivery center">Spend €{{ free_delivery_threshold }} for free delivery!</p>
+      <p class="free-delivery center m-2">Spend €{{ free_delivery_threshold }} for free delivery!</p>
     </div>
     {% for product in products %}
     <hr class="w-100 mt-3">
