--- a/templates/base.html
+++ b/templates/base.html
@@ -115,6 +115,7 @@
     {% if messages %}
       <div class="message-container">
         {% for message in messages %}
+            {% include 'includes/toasts/toast_success.html' %}
         {% endfor %}
       </div>
     {% endif %}
@@ -145,6 +146,9 @@
       </div>
     </footer>
     {% block postloadjs %}
+      <script type="text/javascript">
+        $('.toast').toast('show');
+      </script>
     {% endblock %}
     </body>
 </html>
