--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,17 @@
     {% if messages %}
       <div class="message-container">
         {% for message in messages %}
+          {% with message.level as level %}
+        {% if level == 40 %} <!--Error-->
+            {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %} <!--Warning-->
+            {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %} <!--Success-->
             {% include 'includes/toasts/toast_success.html' %}
+        {% else %} <!--Use info toast-->
+            {% include 'includes/toasts/toast_info.html' %}
+      {% endif %}
+         {% endwith %}
         {% endfor %}
       </div>
     {% endif %}
