--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -51,7 +51,6 @@
                             </td>
                             <td class="py-3">
                                 <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                <p class="my-0 small text-muted"><!--Put in brand name here--></p>
                             </td>
                             <td class="py-3">
                                 <p class="my-0">${{ item.product.price }}</p>
@@ -110,7 +109,7 @@
                                 
                                 <span class="text-uppercase btn btn-links">Back to shop</span>
                             </a>
-                            <a href="" class="btn btn-black rounded-0 btn-lg">
+                            <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
                                 <span class="text-uppercase btn btn-links">Secure Checkout
                                     <span class="icon">
                                         <i class="fas fa-lock"></i>
