--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -65,3 +65,11 @@ select:invalid,
 select option[value=""] {
     color: #aab7c4 !important;
 }
+
+/*--------------------------------------Media Queries*/
+
+@media (max-width: 990px) {
+  .order-conf {
+    margin-top: 2rem !important;
+  }
+}
