Add strong tags to product names on product/product_detail pages

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,7 +37,7 @@
             {% endif %}
             
             <div class="center">
-                <p class="product-name-detail">{{ product.name }}</p>
+                <p class="product-name-detail"><strong>{{ product.name }}</strong></p>
                 {% if product.category %}
               <p>
               <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
