Alter html in toast_success.html

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -45,9 +45,9 @@
                         </p>
                     {% endif %}
                     <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
-                        <span class="text-uppercase btn btn-links">Go To Secure Checkout
+                        <span class="text-uppercase btn btn-links">Go To Shopping Cart
                             <span class="icon">
-                                <i class="fas fa-lock"></i>
+                                <i class="fas fa-shopping-cart"></i>
                             </span>
                         </span>
                     </a>
