--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <div class="allauth-header">
+        {% block inner_content %}
+        {% endblock %}
+    </div>
+{% endblock %}
