--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,20 +5,22 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
+<div class="form-image">
+<div class="form-container center">
 
-<h1>{% trans "Sign In" %}</h1>
+<h1 class="login-head center form-element pt-5"><i>{% trans "Sign In" %}</i></h1>
 
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+<p class="center">{% blocktrans with site.name as site_name %}Please sign in with one
+of your existing third party accounts. Or, <a href="{{ signup_url }}" class="form-links">sign up</a>
 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 <div class="socialaccount_ballot">
 
-  <ul class="socialaccount_providers">
+  <ul class="socialaccount_providers center">
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
 
@@ -29,18 +31,22 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+<p class="center form-content form-element">{% blocktrans %}If you have not created an account yet, then please
+<a href="{{ signup_url }}" class="form-content">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login center form-element" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <p>
+  <a class="button secondaryAction form-links" href="{% url 'account_reset_password' %}" class="form-element">{% trans "Forgot Password?" %}</a>
+  </p>
+  <button class="primaryAction btn btn-links form-element" type="submit">{% trans "Sign In" %}</button>
 </form>
+</div>
+</div>
 
 {% endblock %}
