--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -4,18 +4,20 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+{% block inner_content %}
+<div class="form-image-reg">
+  <div class="form-container center">
+<h1 class="pt-3 login-head center form-element">{% trans "Sign Up" %}</h1>
+<p class="form-element">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<form class="signup form-element" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button type="submit btn btn-links form-element">{% trans "Sign Up" %} &raquo;</button>
 </form>
+</div>
+</div>
 
 {% endblock %}
