Update some allauth templates

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -25,6 +25,7 @@
         <div class="col text-center mt-3">
             <hr>
             <h2 class="logo-font mt-5 mb-5 center"><i>Profile</i></h2>
+            {{profile}}
         </div>
     </div>
 </div>
