--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                 {% if request.user.is_superuser %}
                   <a href="" class="dropdown-item dark-color">Product Management</a>
                 {% endif %}
-                  <a href="" class="dropdown-item dark-color">My Profile</a>
+                  <a href="{% url 'profile' %}" class="dropdown-item dark-color">My Profile</a>
                   <a href="{% url 'account_logout' %}" class="dropdown-item dark-color">Logout</a>
                 {% else %}
                   <a href="{% url 'account_signup' %}" class="dropdown-item dark-color">Register</a>
