--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -85,8 +85,8 @@
             <p class="lead text-left font-weight-bold price">Our Price: ${{ product.price }}</p>
             {% if request.user.is_superuser %}
               <div class="admin-btns pt-5">
-                <a class="edit btn" href="">Edit</a>
-                <a class="delete btn" href="">Delete</a>
+                <a class="edit btn" href="{% url 'edit_product' product.id %}">Edit</a>
+                <a class="delete btn" href="{% url 'delete_product' product.id %}">Delete</a>
               </div>
             {% endif %}
         </div>
