--- a/templates/base.html
+++ b/templates/base.html
@@ -141,9 +141,12 @@
     </section>
     <!--Footer-->
     <hr>
-    <footer class='pt-5'>
+    <footer class='pt-3'>
       <div class="container-fluid footer-container">
         <div class="row">
+          <div class="col-12 ">
+            <a href="" class="dark-blue blog-link">Blog</a>
+          </div>
           <div class="col-12 social p-2">
             <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square mr-1"
                 aria-hidden="true"></i></a>
