--- a/static/css/base.css
+++ b/static/css/base.css
@@ -118,6 +118,12 @@ body {
     color: #36597d !important;
  }  
 
+ .blog-link:hover {
+    text-decoration: none; 
+    list-style-type: none;
+    color: #36597d !important;
+ }
+
  .main-content {
     min-height: calc(100vh - 100px);
  }
