--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
       <div class="container-fluid footer-container">
         <div class="row">
           <div class="col-12 ">
-            <a href="" class="dark-blue blog-link">Blog</a>
+            <a href="{% url 'blog_post_page' %}" class="dark-blue blog-link">Blog</a>
           </div>
           <div class="col-12 social p-2">
             <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square mr-1"
